--- a/views/index.html
+++ b/views/index.html
@@ -73,13 +73,13 @@
     <h1>
       JSON Editor
     </h1>
-    <img class="saving" src="/saving.gif" />
+    <img class="saving" src="saving.gif" />
     <div id="editor">{ }</div>
-    <script src="/validate.js"></script>
-    <script src="/hysteresis.js"></script>
-    <script src="/ws_helper.js"></script>
-    <script src="/ace/src/ace.js"></script>
-    <script src="/sha256.js"></script>
-    <script src="/index.js" defer></script>
+    <script src="validate.js"></script>
+    <script src="hysteresis.js"></script>
+    <script src="ws_helper.js"></script>
+    <script src="ace/src/ace.js"></script>
+    <script src="sha256.js"></script>
+    <script src="index.js" defer></script>
   </body>
 </html>
