--- a/views/index.html
+++ b/views/index.html
@@ -78,7 +78,7 @@
     <script src="validate.js"></script>
     <script src="hysteresis.js"></script>
     <script src="ws_helper.js"></script>
-    <script src="ace/src/ace.js"></script>
+    <script src="/ace/src/ace.js"></script>
     <script src="sha256.js"></script>
     <script src="index.js" defer></script>
   </body>
