--- a/views/index.html
+++ b/views/index.html
@@ -79,7 +79,7 @@
     <script src="hysteresis.js"></script>
     <script src="ws_helper.js"></script>
     <script src="/ace/src/ace.js"></script>
-    <script src="sha256.js"></script>
+    <script src="/sha256.js"></script>
     <script src="index.js" defer></script>
   </body>
 </html>
